2005-10-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.23 "daikon" is released.

2005-09-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.22 "cucumber" is released.

2005-05-28  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.21 "corn" is released.

2005-03-11  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.20 "cilantro" is released.

2005-02-25  Adrian Aichner  <adrian@xemacs.org>

	* automated/region-tests.el: Test regions and zmacs-regions.

2005-02-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.19 "chives" is released.

2005-02-01  Vin Shelton  <acs@xemacs.org>

	* automated/regexp-tests.el: Added test for stale match data with
	shy groups authored by Arnaud Giersch <arnaud.giersch@free.fr>

2005-01-13  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el:
	Test trivial subpatterns and backreferences with shy groups.

2005-03-05  Malcolm Purvis  <malcolmp@xemacs.org>

	* autoconf/regressiontest.pl: Added explict test for '--with-athena=3d'

2005-01-30  Stephen J. Turnbull  <stephen@xemacs.org>

	* autoconf/regressiontest.pl: Basename of configure need not be
	"configure" and arguments differ.  HAVE_DECL_SYS_SIGLIST
	differences are known spurious.  Delete those lines before diff.
	Add my standard configure line to test hash.
	Add usage notes.

2005-01-29  Stephen J. Turnbull  <stephen@xemacs.org>

	* autoconf: New directory for tests for configure.
	* autoconf/regressiontest.pl: New file from Malcolm Purvis.

2004-10-28  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/os-tests.el: New file.  Add tests for bug reported by
	Katsumi Yamaoka 2004-10-26 <b9yvfcyuscf.fsf@jpl.org>.  Test
	suggested by Katsumi Yamaoka <b9yoeipvwn0.fsf@jpl.org>.

2004-10-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.18 "chestnut" is released.

2004-10-07  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: Add tests for bug identified by Steve